--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "function-events-extension",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Extension 'Function' prototype to be able to use evet patern",
   "scripts": {
     "test": "karma start karma.conf.js"
@@ -11,6 +11,11 @@
     "type" : "git",
     "url": "https://github.com/Alcadur/function-events-extension"
   },
+  "keywords": [
+    "function",
+    "event",
+    "handler"
+  ],
   "devDependencies": {
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
